# ioq3-map-exporter

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md
docs/: Unofficial Quake 3 Map Specs.html  entity_lump  qfiles.h  surfaceflags.h  tr_curve.c  tr_local.h
src/: archives.cpp  archives.h  archives_test.cpp  bsp.cpp  bsp.h  bsp_entity.cpp  bsp_entity.h  bsp_entity_test.cpp  bsp_geometry.cpp  bsp_geometry.h  bsp_geometry_test.cpp  bsp_material.cpp  bsp_material.h  bsp_material_test.cpp  bsp_test.cpp  main.cpp  saver.cpp  saver.h  saver_test.cpp  scene.cpp  scene.h  scene_test.cpp  shader_parser.cpp  shader_parser.h  shader_parser_test.cpp  triangulation.cpp  triangulation.h  triangulation_test.cpp
